# TinyPiano

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  crinkler_build.bat  setup.sh
python/: constants.py  convert_midi.py  dataset.py  extract_weights.py  fft.py  file.py  main.py  model.py  notes.py  requirements.txt  synth.py  test_consistency.py  train.py
src/: data.c  data.h  io.c  io.h  main.c  math.h  maths.c  maths.h  model.c  model.h  piano_compact.c  piano_model.c  piano_model_with_weights.c  song.c  song.h  synth.c  synth.h  test_model_output.c  test_synth.c  weights.c  weights.h
src/tests/: test_data.c  test_data.h  test_math.c  test_model_output.c  test_song.c  test_synth.c
